--- a/index.html
+++ b/index.html
@@ -708,7 +708,7 @@
       <div class="col" id="col2">
         <a href="#" id="col2text">Wand Shoe Reviver</a>
         <figure class="imagecontainer">
-          <img src="/Users/mauriceaugust/Documents/Project 2/Wand_ccexpress.png" alt="">
+          <img src="Wand_ccexpress.png" alt="">
         </figure>
       </div>
       <div class="col" id="col3">
