--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-# microcredential
+
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
@@ -713,22 +713,22 @@
       </div>
       <div class="col" id="col3">
         <figure class="usericoncont">
-          <img src="/Users/mauriceaugust/Documents/Project 2/2931147_user_face_avatar_account_head_icon.png" alt="">
+          <img src="2931147_user_face_avatar_account_head_icon.png" alt="">
         </figure>
         <figure class="usericoncont">
-          <img src="/Users/mauriceaugust/Documents/Project 2/2561381_search_icon.png" alt="">
+          <img src="2561381_search_icon.png" alt="">
         </figure>
         <figure class="usericoncont">
-          <img src="/Users/mauriceaugust/Documents/Project 2/2703085_bag_cart_ecommerce_shop_icon.png" alt="">
+          <img src="2703085_bag_cart_ecommerce_shop_icon.png" alt="">
         </figure>
       </div>
     </div>
     <figure class="mainimg">
-      <img src="/Users/mauriceaugust/Documents/Project 2/leather-air_jordan_1-2-min_2048x-copy.jpeg" alt="Cleaning methods">
+      <img src="leather-air_jordan_1-2-min_2048x-copy.jpeg" alt="Cleaning methods">
       <p class="imgtext">To Scrub or Not to Scrub? Read more about this heated debate in the Wizard Circle.</p>
     </figure>
     <figure class="anotherimg">
-      <img src="/Users/mauriceaugust/Documents/Project 2/1489e901-49a2-42f5-8f5a-fa2afc73f369.92c49142211f2246ea56c38b805f46f1.jpeg" alt="Tools of the Trade">
+      <img src="1489e901-49a2-42f5-8f5a-fa2afc73f369.92c49142211f2246ea56c38b805f46f1.jpeg" alt="Tools of the Trade">
       <p id="tools"class="imgtext2">The Tools of the Trade - Get the ultimate kit now!</p>
       <div class="overlay">
 
@@ -739,7 +739,7 @@
     <div class="mainimgcontainer">
       <div class="space1">
         <figure id="one" class="imgholder1">
-          <img src="/Users/mauriceaugust/Documents/Project 2/Sole-Revive-PDP-1.jpeg" alt="Sole Reviver" id="solereviver" class="cartimg">
+          <img src="Sole-Revive-PDP-1.jpeg" alt="Sole Reviver" id="solereviver" class="cartimg">
           <figcaption class="itemfigcaption">Potion No.1 Gel</figcaption>
           <p class="itemprice">$15</p>
           <div class="slidecont">
@@ -747,13 +747,13 @@
           </div>
         </figure>
         <figure id="too" class="imgholder1">
-          <img src="/Users/mauriceaugust/Documents/Project 2/Wipes.jpeg" alt="Cleaning Wipes" id="wipes" class="cartimg">
+          <img src="Wipes.jpeg" alt="Cleaning Wipes" id="wipes" class="cartimg">
           <figcaption class="itemfigcaption">Potion No.1 Wipes</figcaption>
           <p class="itemprice">$10</p>
           <a href="#open" class="cart right-slide">ADD TO CART</a>
         </figure>
         <figure id="three" class="imgholder1">
-          <img src="/Users/mauriceaugust/Documents/Project 2/Cleaningrag.jpeg" alt="Cleaning Rag" id="rag" class="cartimg">
+          <img src="Cleaningrag.jpeg" alt="Cleaning Rag" id="rag" class="cartimg">
           <figcaption class="itemfigcaption">Abracadamn Wrags</figcaption>
           <p class="itemprice">$15</p>
           <a href="#open" class="cart right-slide">ADD TO CART</a>
@@ -761,19 +761,19 @@
       </div>
       <div class="space2">
         <figure class="imgholder1">
-          <img src="/Users/mauriceaugust/Documents/Project 2/pwtw-bleach-1.jpeg" alt="Bleach" id="bleach" class="cartimg">
+          <img src="pwtw-bleach-1.jpeg" alt="Bleach" id="bleach" class="cartimg">
           <figcaption class="itemfigcaption">Forbidden Spell Organic Bleach</figcaption>
           <p class="itemprice">$30</p>
           <a href="#open" class="cart right-slide">ADD TO CART</a>
         </figure>
         <figure  id="s2f2"class="imgholder1">
-          <img src="/Users/mauriceaugust/Documents/Project 2/Detergent.jpeg" alt="Detergent" id="detergent" class="cartimg">
+          <img src="Detergent.jpeg" alt="Detergent" id="detergent" class="cartimg">
           <figcaption class="itemfigcaption">Spell Bomb Organic Detergent Packs </figcaption>
           <p class="itemprice">$20</p>
           <a href="#open" class="cart right-slide">ADD TO CART</a>
         </figure>
         <figure  id="s2f3"class="imgholder1">
-          <img src="/Users/mauriceaugust/Documents/Project 2/sneaker-laundry-bag.jpeg" alt="Laundry-Bag" id="lbag" class="cartimg">
+          <img src="sneaker-laundry-bag.jpeg" alt="Laundry-Bag" id="lbag" class="cartimg">
           <figcaption class="itemfigcaption">The Wands Keep Laundry Bag</figcaption>
           <p class="itemprice">$15</p>
           <a href="#open" class="cart right-slide">ADD TO CART</a>
@@ -785,7 +785,7 @@
         <div class="modaltext">
           <h2>Cart</h2>
           <hr>
-          <img class="modalimg" src="/Users/mauriceaugust/Documents/Project 2/Sole-Revive-PDP-1.jpeg" alt="Sole Reviver">
+          <img class="modalimg" src="Sole-Revive-PDP-1.jpeg" alt="Sole Reviver">
           <div class="price">
             <p id="descriptionbrand">Wand Shoe Reviver</p>
 
@@ -849,11 +849,11 @@
       <br>
       <br>
       <div id="connectcontainer">
-        <a href="https://www.facebook.com/" target="_blank"><img id="fb"src="/Users/mauriceaugust/Documents/Project 2/353422_facebook_logo_icon.png" alt=""></a>
-        <a href="https://twitter.com/?lang=en" target="_blank"><img id="twit" src="/Users/mauriceaugust/Documents/Project 2/icons8-twitter-90.png" alt=""></a>
-        <a href="https://www.pinterest.com/" target="_blank"><img id="pint"src="/Users/mauriceaugust/Documents/Project 2/icons8-pinterest-100.png" alt=""></a>
-        <a href="https://www.instagram.com/" target="_blank"><img id="insta"src="/Users/mauriceaugust/Documents/Project 2/icons8-instagram-90.png" alt=""></a>
-        <a href="https://www.whatsapp.com/" target="_blank"><img id="whatsapp"src="/Users/mauriceaugust/Documents/Project 2/icons8-whatsapp-100.png" alt=""></a>
+        <a href="https://www.facebook.com/" target="_blank"><img id="fb"src="353422_facebook_logo_icon.png" alt=""></a>
+        <a href="https://twitter.com/?lang=en" target="_blank"><img id="twit" src="icons8-twitter-90.png" alt=""></a>
+        <a href="https://www.pinterest.com/" target="_blank"><img id="pint"src="icons8-pinterest-100.png" alt=""></a>
+        <a href="https://www.instagram.com/" target="_blank"><img id="insta"src="icons8-instagram-90.png" alt=""></a>
+        <a href="https://www.whatsapp.com/" target="_blank"><img id="whatsapp"src="icons8-whatsapp-100.png" alt=""></a>
       </div>
 
       <p id="copyright">© 2022 Wand Shoe Reviver: by Maurice August. All Rights Reserved.</p>
